tests/v2.1-legacy/invalid/missing_from.aif
# VIOLATION: FROM field is absent
# Expected: rejected — FROM is required

@AIF/2.0
TO: agent_rd
TYPE: TASK
ID: T001
REF: -
REPORT_TO: agent_pm
---
GOAL: "Do something"
PRIORITY: MED
